# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@score_baselibs//score/language/safecpp:toolchain_features.bzl", "COMPILER_WARNING_FEATURES")
load("//score/mw/com/test:pkg_application.bzl", "pkg_application")

package(default_visibility = ["//score/mw/com/test/generic_skeleton:__subpackages__"])

cc_binary(
    name = "generic_typed_interaction_64_byte_app",
    srcs = ["generic_typed_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=64"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

cc_binary(
    name = "generic_typed_interaction_16_byte_app",
    srcs = ["generic_typed_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=16"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

cc_binary(
    name = "generic_typed_interaction_8_byte_app",
    srcs = ["generic_typed_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=8"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

cc_binary(
    name = "generic_typed_interaction_32_byte_app",
    srcs = ["generic_typed_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=32"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

pkg_application(
    name = "generic_typed_interaction_app-pkg",
    app_name = "generic_typed_interaction_app",
    bin = [
        ":generic_typed_interaction_64_byte_app",
        ":generic_typed_interaction_16_byte_app",
        ":generic_typed_interaction_8_byte_app",
        ":generic_typed_interaction_32_byte_app",
    ],
    etc = [
        "mw_com_config.json",
        "logging.json",
    ],
    visibility = ["//score/mw/com/test/generic_skeleton:__subpackages__"],
)

cc_binary(
    name = "generic_generic_interaction_64_byte_app",
    srcs = ["generic_generic_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=64"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

cc_binary(
    name = "generic_generic_interaction_32_byte_app",
    srcs = ["generic_generic_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=32"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

cc_binary(
    name = "generic_generic_interaction_16_byte_app",
    srcs = ["generic_generic_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=16"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

cc_binary(
    name = "generic_generic_interaction_8_byte_app",
    srcs = ["generic_generic_interaction_app.cpp"],
    defines = ["PAYLOAD_SIZE=8"],
    features = COMPILER_WARNING_FEATURES,
    deps = [
        "//score/mw/com",
        "//score/mw/com/test/common_test_resources:sample_sender_receiver",
        "//score/mw/com/test/common_test_resources:stop_token_sig_term_handler",
    ],
)

pkg_application(
    name = "generic_generic_interaction_app-pkg",
    app_name = "generic_generic_interaction_app",
    bin = [
        ":generic_generic_interaction_64_byte_app",
        ":generic_generic_interaction_32_byte_app",
        ":generic_generic_interaction_16_byte_app",
        ":generic_generic_interaction_8_byte_app",
    ],
    etc = [
        "mw_com_config.json",
        "logging.json",
    ],
    visibility = ["//score/mw/com/test/generic_skeleton:__subpackages__"],
)
